--- a/PlottedAssist/Views/PlantInfo/OtherCare.cshtml
+++ b/PlottedAssist/Views/PlantInfo/OtherCare.cshtml
@@ -122,7 +122,7 @@
                                 <li>keep soil temperature stable</li>
                             </ul>
                             <div style="text-align:center">
-                                <img src="~/Picture/Mulch.png">
+                                <img src="~/Picture/Mulch.png" style="max-width:100%;">
                             </div>
                         </div>
                         <div id="menu2" class="tab-pane fade">
@@ -142,7 +142,7 @@
                                 <li>Always ensure that you have given the pot or garden bed a good deep watering before and after applying fertilizer. This will protect your plants from fertilizer burn.</li>
                             </ul>
                             <div style="text-align:center">
-                                <img src="~/Picture/Fertilizers.png">
+                                <img src="~/Picture/Fertilizers.png" style="max-width:100%;">
                             </div>
                         </div>
                     </div>
