--- a/PlottedAssist/Views/PlantInfo/PlantInfo.cshtml
+++ b/PlottedAssist/Views/PlantInfo/PlantInfo.cshtml
@@ -39,9 +39,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Watering Guide</h3>
+                                
+                                <img src="~/Picture/Plantinfo/Watering_guide.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Watering Guide</h3>
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Know more about watering your plants.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/WateringGuide/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -56,9 +58,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Soil Info</h3>
+                                <img src="~/Picture/Plantinfo/soil_info.jpg" style="width:300px;height:300px;" />
+                                
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Soil Info</h3>
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Get Soil Information and DIY techniques to check your soil type.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/SoilTypes/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -72,9 +76,10 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Pruning Guide</h3>
+                                <img src="~/Picture/Plantinfo/pruning.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Pruning Guide</h3>
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Why should you prune your plants?<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/Prune/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -93,9 +98,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Sunshine Guide</h3>
+                                <img src="~/Picture/Plantinfo/sunshine.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Sunshine Guide</h3>
+
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Learn about importance of sunshine.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/Sunshine/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -109,9 +116,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Guide to Compost, Mulching and Fertilizing</h3>
+                                <img src="~/Picture/Plantinfo/compost.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Guide to Compost, Mulching and Fertilizing</h3>
+
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Guide to Compost, Mulching and Fertilizing.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/OtherCare/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -125,9 +134,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Attracting Wildlife</h3>
+                                <img src="~/Picture/Plantinfo/wildlife.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Attracting Wildlife</h3>
+
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Attracting Native Birds to your garden and Making your garden wildlife friendly.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/WildlifeTips/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -145,9 +156,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Correct Planting Techniques</h3>
+                                <img src="~/Picture/Plantinfo/planting_tech.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Correct Planting Techniques</h3>
+
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Learn Correct planting techniques.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/PlantTech/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
@@ -163,9 +176,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold"> Nearest nurseries</h3>
+                                <img src="~/Picture/Plantinfo/Nurseries.jpg" style="width:300px;height:300px;" />
                             </div>
                             <div class="flip-card-back">
+                                <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold"> Nearest nurseries</h3>
+
                                 <h3 style="font-size:16px;padding-left:10%;padding-right:10%"><br><br>Nearest Nurseries in Yarra City.<br><br><br><br><br></h3>
                                 <div style="text-align:center">
                                     <a class="btn btn-success" href="@Url.Content("~/PlantInfo/Nurseries/")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
