--- a/PlottedAssist/Views/PlantInfo/Prune.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Prune.cshtml
@@ -15,6 +15,7 @@
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
     </div>
+    <div class="row" style="background-color:#4F6657;">
         <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:20px;">
             <h1 class="white-word">Prunning</h1>
             <p class="white-word">
@@ -24,7 +25,7 @@
             <h1 class="white-word">Why Prune?</h1>
 
         </div>
-
+</div>
         <div class="row" style="background-color:#4F6657;">
             <div class="panel-group" id="accordion" style="width:70%; margin:auto;margin-bottom:5%;">
                 <div class="panel panel-primary">
