--- a/PlottedAssist/Views/PlantInfo/SoilTypes.cshtml
+++ b/PlottedAssist/Views/PlantInfo/SoilTypes.cshtml
@@ -23,18 +23,21 @@
 </head>
 <body>
     <div class="row" style="background-color:#4F6657;">
+        <!--Header-->
         <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
         </div>
+        <!--Button-->
         <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
         </div>
-        <div class="col-md-8 col-md-offset-2" style="margin-top:20px;padding-bottom:40px;">
-            <h2 class="white-word">Soil Types</h2>
+        <!--Text part-->
+        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="margin-top:0px;padding-bottom:0px;">
+            <h3 class="white-word">Soil Types</h3>
 
-            <h2 class="white-word">Let’s understand what are these soils and their properties:</h2>
+            <h3 class="white-word">Let’s understand what are these soils and their properties:</h3>
             <p class="white-word">
                 <br>The soil types available in Melbourne are closely related to the underlying geological material on which they have formed. There are different types of soils available but most of them are part of three main categories.
 
@@ -105,7 +108,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:40px;">
+        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="margin-top:20px;padding-bottom:20px;">
             <p class="white-word">
                 Even though the soils are available all over Melbourne, some native indigenous plants have their own preferred soil type and structure. For example, Purple coral pea thrives in the Loom soil type rather than other two soils. Hence it is necessary to understand which soil type you have in your garden.
 
