--- a/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
+++ b/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
@@ -22,7 +22,7 @@
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
         <!--Text part-->
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="margin-top:50px;padding-bottom:80px;">
+        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="margin-top:20px;padding-bottom:20px;">
             <h2 class="white-word">Watering to Establish Your New Plants for Healthy Roots and Better Drought Tolerance!</h2>
             <p class="white-word">
                 How you water your new plants can make all the difference. Deeper, less frequent watering will grow plants whose roots are deeper and healthier, so they are more resilient to drier conditions and stress.<br><br>
@@ -31,7 +31,7 @@
 
 
             </p>
-            <img src="~/Picture/remember.png" style="width:640px;height:520px;">
+            <img src="~/Picture/remember.png" style="width:640px;height:520px;max-width:100%;">
             <p class="white-word">
                 The following are general guidelines. How often and how long you water will depend on your soil and other factors.
             </p>
