--- a/PlottedAssist/Views/Dashboard/Delete.cshtml
+++ b/PlottedAssist/Views/Dashboard/Delete.cshtml
@@ -16,11 +16,11 @@
     <h2>Delete</h2>
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        
+
         <hr />
         <dl class="dl-horizontal">
             <dt>
-               Plant name
+                Plant name
             </dt>
 
             <dd>
@@ -28,7 +28,7 @@
             </dd>
 
             <dt>
-               Nick Name
+                Nick Name
             </dt>
 
             <dd>
@@ -41,9 +41,12 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+                <input type="submit" value="Delete" class="btn btn-default" />
+               
             </div>
         }
+    </div>
+    <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back to list</a>
     </div>
 </div>
