--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <li>@Html.ActionLink("Indi Plants", "Index", "PlantSets")</li>
                     <li>@Html.ActionLink("My Garden", "Index", "Dashboard")</li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plant Info <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plant Guide<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Planting Info", "PlantInfo", "PlantInfo")</li>
                             <li role="separator" class="divider"></li>
