Minor changes in Index and soiltype

--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="col-xs-12" style="margin-bottom:20px;text-align:center;background-color:#6D917A;">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
     <div class="col-xs-12 col-md-4" style="padding:30px;">
-        <h2 class="white-word">What is indigenous plants?</h2>
+        <h2 class="white-word">What are indigenous plants?</h2>
         <p class="white-word">
             Native plants are plants that grow in a particular country like Australia. Indigenous plants are native to Australia, most importantly they are natural to your local area.
         </p>
