Changes on static pages for final Build

--- a/PlottedAssist/Views/PlantInfo/Nurseries.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Nurseries.cshtml
@@ -22,7 +22,7 @@
             <ul>
                 <li>They grow healthier plants. A nursery puts in a great amount of effort to ensure that plants get the best kind of care and nutrients, by using better fertilisers.</li>
                 <li>Their staff are knowledgeable and can help you select the right plants to create a vibrant landscape. A nursery’s employees know important details about the plants they house as well as about horticulture in general.</li>
-                <li>They save you time and hassle. Since the nursery employees look after the plants well, all you need to do is just pick them up and place them in your home.</li>
+                <li>They save your time and hassle. Since the nursery employees look after the plants, all you need to do is just pick them up and place them in your home.</li>
             </ul>
             <p>Looking forward to shop from a nursery or a garden centre near you? Here are the location of local garden centres and nurseries.</p>
             <br>
@@ -31,8 +31,8 @@
     <!--Map-->
     <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12" style="padding-bottom:80px;">
         <p class="col-md-12 white-word" style="text-align:right">
-            Get lost in the map?
-            <a style="color:#FDB298;" onclick="location.reload();">Click here</a> to back to city of yarra.
+            Got lost on the map?
+            <a style="color:#FDB298;" onclick="location.reload();">Click here</a> to get back to city of yarra.
         </p>
         <div id='map' class='col-md-12' style="height:500px;"></div>
     </div>
