OtherCare and Watering guide image centered

--- a/PlottedAssist/Views/PlantInfo/OtherCare.cshtml
+++ b/PlottedAssist/Views/PlantInfo/OtherCare.cshtml
@@ -18,7 +18,7 @@
                 <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
             </div>
             <div class="col-md-8 col-md-offset-2" style="margin-top:20px;padding-bottom:40px;">
-                <h1 class="white-word">Other cares</h1>
+                <h1 class="white-word">Other Planting Cares</h1>
                 <p class="white-word">
                     Once you have established your sustainable garden, the next step is to know how to care for it through regular maintenance. This section will provide some information for you to follow. <br>
 
