--- a/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
+++ b/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
@@ -30,12 +30,14 @@
                 <p class="white-word">
                     How you water your new plants can make all the difference. Deeper, less frequent watering will grow plants whose roots are deeper and healthier, so they are more resilient to drier conditions and stress.<br><br>
                 </p>
-                <img src="~/Picture/remember.png" style="width:640px;height:520px;max-width:100%;">
-                <p class="white-word">
-                    The following are general guidelines. How often and how long you water will depend on your soil and other factors.
-                </p>
+                <div style="text-align:center">
+                    <img src="~/Picture/remember.png" style="width:640px;height:520px;max-width:100%;">
+                </div>
+                    <p class="white-word">
+                        The following are general guidelines. How often and how long you water will depend on your soil and other factors.
+                    </p>
+                </div>
             </div>
-        </div>
         <div class="row" style="background-color:#4F6657;">
             <div class="panel-group" id="accordion" style="width:70%; margin:auto;margin-bottom:5%;background-color:#4F6657;">
                 <div class="panel panel-primary">
