--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <li>@Html.ActionLink("Soil Types", "SoilTypes", "PlantInfo")</li>
                             <li>@Html.ActionLink("Why Prune", "Prune", "PlantInfo")</li>
                             <li>@Html.ActionLink("Sunshine Guide", "Sunshine", "PlantInfo")</li>
-                            <li>@Html.ActionLink("Other Cares", "OtherCare", "PlantInfo")</li>
+                            <li>@Html.ActionLink("Other Planting Cares", "OtherCare", "PlantInfo")</li>
                             <li>@Html.ActionLink("Correct Planting Techniques", "PlantTech", "PlantInfo")</li>
                             <li>@Html.ActionLink("Wildlife Friendly Tips", "WildlifeTips", "PlantInfo")</li>
                         </ul>
