--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -183,15 +183,15 @@
             <dd>
 
                 @if (Model.PlantBees == "1")
-                {<img src="~/Picture/Animal_icon/Bee.png" height="40">}
+                {<img src="~/Picture/Animal_icon/Bee.png" height="40" title="Bee">}
                 @if (Model.PlantButterfly == "1")
-                {<img src="~/Picture/Animal_icon/butterfly.png" height="40">}
+                {<img src="~/Picture/Animal_icon/butterfly.png" height="40" title="Butterfly">}
                 @if (Model.PlantBird == "1")
-                {<img src="~/Picture/Animal_icon/Bird.png" height="40">}
+                {<img src="~/Picture/Animal_icon/Bird.png" height="40" title="Bird">}
                 @if (Model.PlantInsects == "1")
-                {<img src="~/Picture/Animal_icon/Insect.png" height="30">}
+                {<img src="~/Picture/Animal_icon/Insect.png" height="30" title="Insect">}
                 @if (Model.PlantLarve == "1")
-                {<img src="~/Picture/Animal_icon/Larve.png" height="30">}
+                {<img src="~/Picture/Animal_icon/Larve.png" height="30" title="Larve">}
 
             </dd>
             <dt>
