--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -75,8 +75,8 @@
                         <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
                             <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
                             <div style="position:relative;margin-top:-75px;background-color:rgba(0,0,0,0.5);border-radius:15px;">
-                                <p class="white-word" style="font-size:16px;padding-top:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
-                                <p class="white-word" style="font-size:16px;margin-bottom:0px;padding-bottom:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantSciName)</p>
+                                <p class="white-word" style="font-size:16px;padding-top:10px;margin-left:15px;">Common Name:</p>
+                                <p class="white-word" style="font-size:16px;margin-bottom:0px;padding-bottom:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
                             </div>
                         </a>
                     </div>
