--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -43,50 +43,62 @@
 
     <div class="form-group">
         <div class="control-label col-sm-2">Water Frquency</div>
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantWaterFrq } })
             Recommended frequency: @ViewBag.PlantWaterFrq Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @type = "number", @class = "text-white" })
         </div>
     </div>
 
     <div class="form-group">
         <div class="control-label col-sm-2">Prune Frquency</div>
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantPruningFrq } })
             Recommended frequency: @ViewBag.PlantPruningFrq Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-white" })
         </div>
     </div>
 
     <div class="form-group">
         <div class="control-label col-sm-2">Fertilize Frquency</div>
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantFertilizerFrq } })
             Recommended frequency: @ViewBag.PlantFertilizerFrq Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-white" })
         </div>
     </div>
 
     <div class="form-group">
         <div class="control-label col-sm-2">Mist Frquency</div>
-        <div class="col-md-10">
+        <div class="col-md-4">
             @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control", @Value = @ViewBag.PlantMistFrq } })
             Recommended frequency: @ViewBag.PlantMistFrq Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @type = "number", @class = "text-white" })
         </div>
     </div>
 
+    <div class="col-sm-3 col-xs-2 col-md-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;">
+        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back to list</a>
+    </div>
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-1 col-md-2">
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
 
-    <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
-        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back to list</a>
-    </div>
 </div>
 }
 
