--- a/PlottedAssist/Views/Dashboard/Edit.cshtml
+++ b/PlottedAssist/Views/Dashboard/Edit.cshtml
@@ -19,73 +19,86 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-            @Html.HiddenFor(model => model.PlantId)
-            @Html.HiddenFor(model => model.UserId)
-            @Html.HiddenFor(model => model.StartDate)
-            @Html.HiddenFor(model => model.EndDate)
-            @Html.HiddenFor(model => model.Active)
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.PlantId)
+    @Html.HiddenFor(model => model.UserId)
+    @Html.HiddenFor(model => model.StartDate)
+    @Html.HiddenFor(model => model.EndDate)
+    @Html.HiddenFor(model => model.Active)
 
 
-            <div class="form-group">
-                <div class="control-label col-sm-2">Plant Nick Name</div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
+    <div class="form-group">
+        <div class="control-label col-sm-2">Plant Nick Name</div>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
 
-                    @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-white" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="control-label col-sm-2">Water Frquency</div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } })
-                    Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantWaterFrq) Days
-                    @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @class = "text-white" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="control-label col-sm-2">Prune Frquency</div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } })
-                    Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantPruningFrq) Days
-                    @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @class = "text-white" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="control-label col-sm-2">Fertilize Frquency</div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } })
-                    Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantFertilizerFrq) Days
-                    @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @class = "text-white" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="control-label col-sm-2">Mist Frquency</div>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } })
-                    Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantMistFrq) Days
-                    @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @class = "text-white" })
-                </div>
-            </div>
-
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
-            </div>
+            @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-white" })
         </div>
-    }
-    <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+    </div>
+
+    <div class="form-group">
+        <div class="control-label col-sm-2">Water Frquency</div>
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } })
+            Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantWaterFrq) Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
+            @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @class = "text-white" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="control-label col-sm-2">Prune Frquency</div>
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } })
+            Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantPruningFrq) Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
+            @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @class = "text-white" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="control-label col-sm-2">Fertilize Frquency</div>
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } })
+            Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantFertilizerFrq) Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
+            @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @class = "text-white" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="control-label col-sm-2">Mist Frquency</div>
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } })
+            Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantMistFrq) Days
+            
+        </div>
+        <div class="col-md-4" style="margin-left:-10%">
+            @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @class = "text-white" })
+        </div>
+    </div>
+
+    <div class="col-sm-3 col-xs-2 col-md-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;">
         <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back to list</a>
     </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-1 col-md-2">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
+</div>
+    }
+    
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
