--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -28,7 +28,7 @@
         </div>
         
         <div class="white-word" style="margin-bottom:75px;text-align:center">
-            <h2>Based on your preference, here is eligible indigenous plants what we have found.</h2>
+            <h2>Based on your preference, here is eligible indigenous plants what we found.</h2>
         </div>
         
         <div class="col-md-10 col-md-offset-1">
