Plant test change

--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -34,15 +34,15 @@
             <h1 style="font-size:16px;">1. What type of plants would you like to plant? <a href="@Url.Content("~/PlantSets/Instrction/")" style="color:#FDB298">Learn more...</a></h1>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" name="Tree" value="Trees" checked="checked">Trees
+                    <input type="checkbox" name="Tree" value="Trees"  checked="checked">Trees
                 </label>
-                <label>
+                <label style="margin-left:30px">
                     <input type="checkbox" name="Shrub" value="Shrubs" checked="checked">Shrubs
                 </label>
-                <label>
+                <label style="margin-left:30px">
                     <input type="checkbox" name="Crepper" value="Creepers" checked="checked">Creepers
                 </label>
-                <label>
+                <label style="margin-left:30px">
                     <input type="checkbox" name="Grass" value="Small Plants" checked="checked">Grass
                 </label>
             </div>
