--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
         <div class="col-xs-12 col-md-6" style="min-height:300px;">
             <div class="col-xs-12 col-md-8 col-md-offset-0 white-word" style="margin-top:30px; text-align:center;">
                 <h3 style="text-align:center;font-weight:bold">My Garden</h3>
-                <p style="font-size:16px;">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</p>
+                <p style="font-size:16px;">Help to keep track of caring activities that are customized when you started growing the plants. Check and reschedule plants in your garden.</p>
                 <a class="btn btn-success" href="@Url.Content("~/DashBoard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
             </div>
         </div>
